apps/nginx/augmentation-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: augmentation
 namespace: default
 annotations:
   kubernetes.io/ingress.class: "nginx"
   ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
 - hosts:
   - "augmentation.wu2.prague.office-int.com"
   secretName: wu2-tls-certificate
 rules:
 - host: "augmentation.wu2.prague.office-int.com"
   http:
     paths:
     - path: /
       backend:
         serviceName: augmentation
         servicePort: 80
