apps/nginx/historian-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: historian
 namespace: default
 annotations:
   kubernetes.io/ingress.class: "nginx"
   ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
 - hosts:
   - "historian.wu2.prague.office-int.com"
   secretName: wu2-tls-certificate
 rules:
 - host: "historian.wu2.prague.office-int.com"
   http:
     paths:
     - path: /
       backend:
         serviceName: terrific-otter-historian
         servicePort: 80
