apps/nginx/ingress-ppe.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: apps-praguetenant-ppe
 namespace: default
 annotations:
   kubernetes.io/ingress.class: "nginx-ppe"
   ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
 - hosts:
   - "www.wu2-ppe.prague.office-int.com"
   secretName: wu2-ppe-tls-certificate
 rules:
 - host: "www.wu2-ppe.prague.office-int.com"
   http:
     paths:
     - path: /
       backend:
         serviceName: apps-praguetenant
         servicePort: 8080
