apps/nginx/minio-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: minio
 namespace: default
 annotations:
   kubernetes.io/ingress.class: "nginx"
   ingress.kubernetes.io/rewrite-target: /
   ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
 - hosts:
   - "pragueapps.westus2.cloudapp.azure.com"
   secretName: tls-certificate
 rules:
 - host: "pragueapps.westus2.cloudapp.azure.com"
   http:
     paths:
     - path: /minio
       backend:
         serviceName: agents-storage-minio-svc
         servicePort: 9000
