apps/nginx/tmz-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: tmz
 namespace: default
 annotations:
   kubernetes.io/ingress.class: "nginx"
   ingress.kubernetes.io/ssl-redirect: "true"
   nginx.org/websocket-services: "wiggly-wombat-tmz"
spec:
 tls:
 - hosts:
   - "tmz.wu2.prague.office-int.com"
   secretName: wu2-tls-certificate
 rules:
 - host: "tmz.wu2.prague.office-int.com"
   http:
     paths:
     - path: /
       backend:
         serviceName: wiggly-wombat-tmz
         servicePort: 80
